Initial commit: QEMU MIPI CSI-2 implementation
- Add MIPI D-PHY emulation
- Add CSI-2 RX controller
- Add V4L2 bridge for Linux compatibility
- Add PCIe device interface
- Add comprehensive documentation
- Support configurable lanes and line rates

--- a/hw/misc/Kconfig
+++ b/hw/misc/Kconfig
@@ -235,4 +235,10 @@ config IOSB
 config XLNX_VERSAL_TRNG
     bool
 
+config MIPI_CSI2
+    bool
+    default y if PCI_DEVICES
+    depends on PCI
+    select MSI_NONBROKEN
+
 source macio/Kconfig
