Add csi2 v4l2 loopback - Implement MIPI CSI-2 PCIe device emulation - Add V4L2 loopback integration for standard video API compatibility Tested with: - Linux 6.15.4 kernel - v4l2loopback module

--- a/backends/meson.build
+++ b/backends/meson.build
@@ -42,6 +42,6 @@ endif
 
 system_ss.add(when: 'CONFIG_SPDM_SOCKET', if_true: files('spdm-socket.c'))
 
-system_ss.add(files('v4l2.c'))
+#system_ss.add(files('v4l2.c'))
 
 subdir('tpm')
